Streams can return unmodifiable lists.